# cafe_orders_test_task

./: README.md  pyproject.toml
cafe_orders/: manage.py
cafe_orders/cafe_orders/: asgi.py  settings.py  urls.py  wsgi.py
cafe_orders/orders/: models.py
cafe_orders/orders/migrations/: 0001_initial.py
